# mcp-manager

./: .gitignore  Dockerfile  README.md  dashboard.py  docker-compose.yml  pyproject.toml
agent/: Dockerfile  agent.py  app.py  main.py  requirements.txt  service.py
agent/backup/: Note.md  agent.py  app.py  login.py  mcp_server_back.py  note.txt  questions.txt  service.py
agent/mcp_server/: mcp_server.py
agent/test/: test_1.py  test_4.py  test_4_2.py  test_4_4.py  test_4_5.py  test_6.py  test_7.py  test_agent.py  token.txt
chatbotmcp/: agent.py  app.py
chatbotmcp/retrievalMCP/: listTool.py  models.py
chatbotmcp_new/: agent.py  app.py  requirements.txt  service.py  test.py  utils.py
fastmcp_server/: README.md  config.json  config_2.json  config_utils.py  config_v2.json  db.py  models.py  openapi_utils.py  pyproject.toml  requirements.txt  routes.py  server.py
fastmcp_server/examples/: swagger-pet-store.json
fastmcp_server/tests/: test_server.py
fastmcp_server/utils/: db_utils.py  openapi_utils.py
mcp_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
raw/: agent.py  app.py
raw/retrievalMCP/: calltool.py
streamlit-fastapi-client/: README.md  requirements.txt
testMCP/: test_calltoolMCP.py  test_kingwork_uat_request_search_employee.py  test_kingwork_uat_request_search_employee_mcp.py
testMethod/: main.py  pets.json  pyproject.toml  testClientSse.py  testDisconectSse.py  testEnable.py  test_add_server.py  test_callTool.py  test_exampleEndpoint.py  test_listToolEna.py  test_listTool_ex.py  test_offAll.py  testdb.py  testfrontEnd.py  tool.json
(+9 files in other folders)
